<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.PrepareRecipeActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/black">

        <FrameLayout
            android:id="@+id/flImageRecipe"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/ivRecipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/contentImageRecipe"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/tacos"
                android:scaleType="fitXY"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:background="@android:color/white" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvRecipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Receta test name"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/lyOptions"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/lyOptions"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/flImageRecipe"
            >

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="150dp"
           android:background="#FF9800"
           android:padding="10dp">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:text="@string/noteRecipe"
               android:textColor="@color/white"
               android:textStyle="bold"
               android:textSize="20sp" />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="150dp"
           android:orientation="vertical"
           android:gravity="center">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="20sp"
               android:textStyle="bold"
               android:layout_marginEnd="60dp"
               android:text="Cantidad de porciones:"/>
           <Spinner
               android:id="@+id/cbPortions"
               android:layout_width="200dp"
               android:layout_height="50dp"
               android:layout_marginEnd="60dp" />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="180dp"
           android:background="#F14949"
           android:padding="10dp">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:text="@string/disclaimer"
               android:textColor="@color/white"
               android:textStyle="bold"
               android:textSize="20sp" />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="500dp"
           android:gravity="center"
           android:orientation="vertical">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/ingredient"
               android:padding="15dp"
               android:textStyle="bold"
               android:textSize="25sp"
               android:textAlignment="center" />

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/rvIngredients"
               android:layout_width="match_parent"
               android:layout_height="match_parent" />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="500dp"
           android:gravity="center"
           android:orientation="vertical">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/preparation"
               android:padding="15dp"
               android:textStyle="bold"
               android:textSize="25sp"
               android:textAlignment="center" />

           <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSteps"
               android:layout_width="match_parent"
               android:layout_height="match_parent" />
       </LinearLayout>
   </LinearLayout>



</ScrollView>
</LinearLayout>